Fixes #25 reference Table title alignment.  Left aligned table head and table data to give a better overall UI look.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -605,6 +605,11 @@ summary {
   margin-top: 15px;
 }
 
+.table-title {
+  text-align: left;
+  padding-left: 15px !important;
+}
+
 
 th {
   border: 1px solid black;
@@ -613,5 +618,6 @@ th {
 }
 td {
   border: 1px solid black;
-  text-align: center;
+  text-align: left;
+  padding-left: 15px !important;
 }
